tests/compile_errors/015-bad-pattern.buzz
// Could not compile pattern
import "std";

test "bad pattern" {
    const bad = $"bad\pattern";
}
